# RoboticAlt

./: README.md  camera_node.py  launch.py  motor_node.py  motor_node1.py  new_camera_node.py  robot.launch.py  robot_launch.py  route.py  setup.py  setup1.py  smart_driver.py
motor/: keycontrol.py
phase 3/: README.md
phase1/: README.md  СтендГотовий.skp
phase1/RobotZone модель ландшафту/: README.md
phase1/RobotZone модель ландшафту/Проект (UE4 4.27.2)/ThirdPersonBP/Maps/: ThirdPersonExampleMap_BuiltData.uasset
phase1/RobotZone модель ландшафту/Проект (UE4 4.27.2)/ThirdPersonBP/Maps/ThirdPersonExampleMap_sharedassets/: road_LayerInfo.uasset  sliz_LayerInfo.uasset
phase1/RobotZone модель ландшафту/Проект (UE4 4.27.2)/terrain/: grass_LayerInfo.uasset  sand_LayerInfo.uasset  terrain.uasset
phase2/: README.md  current access 13.03.2026.md
phase2/ros2_ws/: current access12.03.1026.md  package.xml
phase2/ros2_ws/camera/: README.md  camera_node.py
phase2/ros2_ws/launches/: README.md  robot_launch.py  sample_launch.py
phase2/ros2_ws/motors/: README.md  motor_node.py
phase2/ros2_ws/route/: README.md  route.yaml
phase2/ros2_ws/setup/: README.md  motor_driver_setup.py  robot_bringup_setup.py
phase2/ros2_ws/teleop and map/: README.md  keycontrol.py  route_executor.py
phase3/: README.md
ros2_ws/launches/: launch.py
ros2_ws/setup/: setup.py  setup3.py
route/: route.py  route.yaml
setup/: setup.py  setup2.py  setup3.py
teleop and map/: keycontrol.py
